Change the date format to fixed width and set #mob-date to text-align: center

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1032,7 +1032,7 @@ body .pages {
 }
 
 #mob-date {
-    text-align: right;
+	text-align: center;
 }
 
 #mob-no {
